--- a/app/src/main/res/layout/pop_read_book_style.xml
+++ b/app/src/main/res/layout/pop_read_book_style.xml
@@ -1,7 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-</LinearLayout>
+    <io.legado.app.ui.widget.image.CircleImageView
+        android:id="@+id/bg0"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:civ_border_color="@color/tv_text_default"
+        app:civ_border_width="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/bg1"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg0"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="@string/text"
+        app:layout_constraintTop_toTopOf="@+id/bg0"
+        app:layout_constraintLeft_toLeftOf="@+id/bg0" />
+
+    <io.legado.app.ui.widget.image.CircleImageView
+        android:id="@+id/bg1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:civ_border_color="@color/tv_text_default"
+        app:civ_border_width="1dp"
+        app:layout_constraintLeft_toRightOf="@+id/bg0"
+        app:layout_constraintRight_toLeftOf="@+id/bg2"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="@string/text"
+        app:layout_constraintTop_toTopOf="@+id/bg1"
+        app:layout_constraintLeft_toLeftOf="@+id/bg1" />
+
+    <io.legado.app.ui.widget.image.CircleImageView
+        android:id="@+id/bg2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:civ_border_color="@color/tv_text_default"
+        app:civ_border_width="1dp"
+        app:layout_constraintLeft_toRightOf="@+id/bg1"
+        app:layout_constraintRight_toLeftOf="@+id/bg3"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="@string/text"
+        app:layout_constraintTop_toTopOf="@+id/bg2"
+        app:layout_constraintLeft_toLeftOf="@+id/bg2" />
+
+    <io.legado.app.ui.widget.image.CircleImageView
+        android:id="@+id/bg3"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:civ_border_color="@color/tv_text_default"
+        app:civ_border_width="1dp"
+        app:layout_constraintLeft_toRightOf="@+id/bg2"
+        app:layout_constraintRight_toLeftOf="@+id/bg4"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg3"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="@string/text"
+        app:layout_constraintTop_toTopOf="@+id/bg3"
+        app:layout_constraintLeft_toLeftOf="@+id/bg3" />
+
+    <io.legado.app.ui.widget.image.CircleImageView
+        android:id="@+id/bg4"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:civ_border_color="@color/tv_text_default"
+        app:civ_border_width="1dp"
+        app:layout_constraintLeft_toRightOf="@+id/bg3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg4"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="@string/text"
+        app:layout_constraintTop_toTopOf="@+id/bg4"
+        app:layout_constraintLeft_toLeftOf="@+id/bg4" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
