--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -33,7 +33,8 @@
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toRightOf="@+id/bg0"
         app:layout_constraintRight_toLeftOf="@+id/bg2"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bg0" />
 
     <TextView
         android:id="@+id/tv_bg1"
@@ -52,7 +53,8 @@
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toRightOf="@+id/bg1"
         app:layout_constraintRight_toLeftOf="@+id/bg3"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bg0" />
 
     <TextView
         android:id="@+id/tv_bg2"
@@ -71,7 +73,8 @@
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toRightOf="@+id/bg2"
         app:layout_constraintRight_toLeftOf="@+id/bg4"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bg0" />
 
     <TextView
         android:id="@+id/tv_bg3"
@@ -90,7 +93,8 @@
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toRightOf="@+id/bg3"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bg0" />
 
     <TextView
         android:id="@+id/tv_bg4"
