--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -6,6 +6,22 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
+    <View
+        android:id="@+id/vw_bg_fg"
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:background="@color/btn_bg_press"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_bg_ts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/text_bg_style"
+        app:layout_constraintTop_toBottomOf="@+id/vw_bg_fg" />
+
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/bg0"
         android:layout_width="48dp"
@@ -14,7 +30,8 @@
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/bg1"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_bg_ts" />
 
     <TextView
         android:id="@+id/tv_bg0"
