--- a/app/src/main/res/xml/pref_config.xml
+++ b/app/src/main/res/xml/pref_config.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen>
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <io.legado.app.lib.theme.prefs.ATESwitchPreference
+        android:defaultValue="true"
+        android:key="@string/pk_auto_refresh"
+        android:summary="@string/ps_auto_refresh"
+        android:title="@string/pt_auto_refresh"
+        app:iconSpaceReserved="false" />
+
+    <io.legado.app.lib.theme.prefs.ATESwitchPreference
+        android:defaultValue="false"
+        android:key="@string/pk_default_read"
+        android:summary="@string/ps_default_read"
+        android:title="@string/pt_default_read"
+        app:iconSpaceReserved="false" />
 
 
 </androidx.preference.PreferenceScreen>
