--- a/app/src/main/res/xml/pref_config_read.xml
+++ b/app/src/main/res/xml/pref_config_read.xml
@@ -15,9 +15,15 @@
         app:iconSpaceReserved="false" />
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
+        android:defaultValue="true"
+        android:title="@string/volume_key_page"
+        android:key="volumeKeyPage"
+        app:iconSpaceReserved="false" />
+
+    <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="false"
-        android:title="@string/pt_hide_navigation_bar"
-        android:key="volumeKeyPageTurning"
+        android:title="@string/volume_key_page_on_play"
+        android:key="volumeKeyPageOnPlay"
         app:iconSpaceReserved="false" />
 
 </androidx.preference.PreferenceScreen>
