--- a/app/src/main/res/layout/dialog_read_aloud.xml
+++ b/app/src/main/res/layout/dialog_read_aloud.xml
@@ -30,6 +30,16 @@
             android:layout_weight="1" />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_play_prev"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_skip_previous"
+            android:tint="@color/tv_text_default" />
+
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_play_pause"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -47,6 +57,16 @@
             android:layout_marginRight="8dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_stop_black_24dp"
+            android:tint="@color/tv_text_default" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_play_next"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_skip_next"
             android:tint="@color/tv_text_default" />
 
         <View
