--- a/app/src/main/res/layout/item_bookshelf_list.xml
+++ b/app/src/main/res/layout/item_bookshelf_list.xml
@@ -27,8 +27,9 @@
         android:id="@+id/fl_has_new"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_name">
+        app:layout_constraintTop_toTopOf="parent">
 
         <io.legado.app.ui.widget.BadgeView
             android:id="@+id/bv_unread"
