--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -7,12 +7,54 @@
     android:background="@color/background"
     android:padding="10dp">
 
+    <LinearLayout
+        android:id="@+id/ll_text_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/text_size" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_text_size_add"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_add"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:tint="@color/tv_text_default" />
+
+        <io.legado.app.lib.theme.view.ATESeekBar
+            android:id="@+id/seek_text_size"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="4"
+            android:max="50" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_text_size_remove"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_remove"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:tint="@color/tv_text_default" />
+
+    </LinearLayout>
+
     <View
         android:id="@+id/vw_bg_fg"
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
         android:background="@color/btn_bg_press"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ll_text_size" />
 
     <TextView
         android:id="@+id/tv_page_anim"
